--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,15 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  get:
+  get_storage: ^2.0.3
+  dio: ^4.0.6
+  dio_http_cache: ^0.3.0
+  google_fonts: ^3.0.1
+  shimmer: ^2.0.0
+  intl:
+  geocoding: ^2.0.5
+
 
 dev_dependencies:
   flutter_test:
@@ -57,10 +66,9 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - lib/app/data/file_data/data_json.json
+    - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
